# climate-risk-map-api

./: .gitignore  README.md  ec2_ubuntu.sh  pyproject.toml  template.yaml
.github/workflows/: api-v1.yml  api.yml  data_processing-infraxclimate-scenariomip.yml
api/: README.md  template.yaml
api/app/: database.py  main.py
api/app/v1/: api.py  config.py  query.py  schemas.py  utils.py
api/tests/app/v1/: test_query.py
api/v1/: README.md  pyproject.toml  requirements.txt  samconfig_sample.toml  template.yml  template_old.yaml
api/v1/app/: api.py  config.py  database.py  main.py  query.py  utils.py
api/v1/tests/: test_query.py
app/: database.py  main.py  utils.py
app/routers/: data.py
app/v1/: api.py  config.py  query.py  schemas.py  utils.py
data_processing/etl/pgosm_flex/: Dockerfile  README.md  env.sample
data_processing/etl/pgosm_flex/custom-layerset/: infrastructure.ini
data_processing/infraxclimate/nasa_nex/: Dockerfile  README.md  constants.py  env.sample  generate_geotiff.py  infra_intersection.py  pipeline.py  process_climate.py  pyproject.toml  run.py  utils.py
data_processing/infraxclimate/scenariomip/: Dockerfile  README.md  generate_geotiff.py  infra_intersection.py  infra_intersection_load.py  pipeline.py  process_climate.py  pyproject.toml  run.py  utils.py
data_processing/infraxclimate/scenariomip/tests/: test_infra_intersection.py  test_process_climate.py
database/v1/: README.md
database/v1/archive/: 20240905185425_climate_schema.sql  20240910231103_create_climate_decade_month_idx.sql
tests/v1/: test_query.py
(+14 files in other folders)
